--- a/_posts/0000-01-02-savochkt.md
+++ b/_posts/0000-01-02-savochkt.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-This is savochkt's slide.
+This is Savochkt's slide.
 Use the left arrow to go back!
